header created for about page

--- a/about.html
+++ b/about.html
@@ -2,9 +2,43 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="style/general.css">
 </head>
 
 <body>
+    <div class="page-header">
+        <div class="top-panel">
+            <div class="top-search">
+                <input class="top-search-input" type="text">
+                <i class="fa fa-search" style="color:gray;"></i>
+                </input>
+            </div>
+            <div class="top-title">Clothster</div>
+            <div class="top-buttons">
+                <button class="login-button">ورود</button>
+                <button class="register-button">عضویت</button>
+            </div>
+        </div>
+        <div class="categories">
+            <span style="color:gray">برندها</span>
+            <span style="color:gray">تخفیف</span>
+            <span style="color:gray">ورزشی</span>
+            <span style="color:gray">بچه‌گانه</span>
+            <span style="color:gray">زنانه</span>
+            <span style="color:gray">مردانه</span>
+        </div>
+        <hr style="margin-top:12px; width:89%; color:transparent">
+        <div class="navbar"></div>
+    </div>
+
+    <div class="page-about-body">
+        Body
+    </div>
+
+    <div class="page-footer">
+        Footer
+    </div>
 </body>
 
 </html>
