--- a/about.html
+++ b/about.html
@@ -29,7 +29,50 @@
             <span style="color:gray">مردانه</span>
         </div>
         <hr style="margin-top:12px; width:89%; color:transparent">
-        <div class="navbar"></div>
+        <div class="navbar">
+            <div class="navbar-item">
+                <button class="navbar-button">
+                    <img src="./icons/lock.svg" style="margin-top: -16px; width: 60px; height: 60px;">
+                    <p style="margin-top: 10px;">حریم خصوصی</p>
+                </button>
+            </div>
+            <div class="navbar-item">
+                <button class="navbar-button">
+                    <img src="./icons/user.svg" style="margin-top: -16px; width: 60px; height: 60px;">
+                    <p style="margin-top:10px;"> شرایط و ضوابط</p>
+                </button>
+
+            </div>
+            <div class="navbar-item">
+                <button class="navbar-button">
+                    <img src="./icons/return.svg" style="margin-top: -26px; width: 85px; height: 85px;">
+                    <p style="margin-top:-7px;"> بازگرداندن</p>
+                </button>
+
+            </div>
+            <div class="navbar-item">
+                <button class="navbar-button">
+                    <img src="./icons/question.svg" style="margin-top: -38px; width: 100px; height: 100px;">
+                    <p style="margin-top:-12px;"> سوالات متداول</p>
+                </button>
+
+            </div>
+            <div class="navbar-item">
+                <button class="navbar-button">
+                    <img src="./icons/contact.svg" style="margin-top: -18px; width: 65px; height: 60px;">
+                    <p style="margin-top:10px;"> تماس با ما</p>
+                </button>
+
+            </div>
+
+            <div class="navbar-item">
+                <button class="navbar-button">
+                    <img src="./icons/chat.svg" style="margin-top: -26px; width: 85px; height: 85px;">
+                    <p style="margin-top:-7px;"> درباره‌ی ما</p>
+                </button>
+
+            </div>
+        </div>
     </div>
 
     <div class="page-about-body">
