--- a/about.html
+++ b/about.html
@@ -32,43 +32,92 @@
         <div class="navbar">
             <div class="navbar-item">
                 <button class="navbar-button">
-                    <img src="./icons/lock.svg" style="margin-top: -16px; width: 60px; height: 60px;">
-                    <p style="margin-top: 10px;">حریم خصوصی</p>
+                    <?xml version="1.0" ?>
+                    <svg class="navbar-svg" PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
+                        <svg enable-background="new 0 0 500 500" id="Layer_1" version="1.1" viewBox="0 0 500 500" width="45px" xml:space="preserve"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <path clip-rule="evenodd" d="M131.889,150.061v63.597h-27.256  c-20.079,0-36.343,16.263-36.343,36.342v181.711c0,20.078,16.264,36.34,36.343,36.34h290.734c20.078,0,36.345-16.262,36.345-36.34  V250c0-20.079-16.267-36.342-36.345-36.342h-27.254v-63.597c0-65.232-52.882-118.111-118.112-118.111  S131.889,84.828,131.889,150.061z M177.317,213.658v-63.597c0-40.157,32.525-72.685,72.683-72.685  c40.158,0,72.685,32.528,72.685,72.685v63.597H177.317z M213.658,313.599c0-20.078,16.263-36.341,36.342-36.341  s36.341,16.263,36.341,36.341c0,12.812-6.634,24.079-16.625,30.529c0,0,3.55,21.446,7.542,46.699  c0,7.538-6.087,13.625-13.629,13.625h-27.258c-7.541,0-13.627-6.087-13.627-13.625l7.542-46.699  C220.294,337.678,213.658,326.41,213.658,313.599z"
+                                fill-rule="evenodd" />
+                        </svg>
+                        <p style="margin-top: 16px;">حریم خصوصی</p>
                 </button>
             </div>
             <div class="navbar-item">
                 <button class="navbar-button">
-                    <img src="./icons/user.svg" style="margin-top: -16px; width: 60px; height: 60px;">
-                    <p style="margin-top:10px;"> شرایط و ضوابط</p>
-                </button>
-
-            </div>
-            <div class="navbar-item">
-                <button class="navbar-button">
-                    <img src="./icons/return.svg" style="margin-top: -26px; width: 85px; height: 85px;">
-                    <p style="margin-top:-7px;"> بازگرداندن</p>
-                </button>
-
-            </div>
-            <div class="navbar-item">
-                <button class="navbar-button">
-                    <img src="./icons/question.svg" style="margin-top: -38px; width: 100px; height: 100px;">
-                    <p style="margin-top:-12px;"> سوالات متداول</p>
+                    <?xml version="1.0" ?>
+                    <svg class="navbar-svg" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                        <path class="heroicon-ui" d="M12 12a5 5 0 1 1 0-10 5 5 0 0 1 0 10zm0-2a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm9 11a1 1 0 0 1-2 0v-2a3 3 0 0 0-3-3H8a3 3 0 0 0-3 3v2a1 1 0 0 1-2 0v-2a5 5 0 0 1 5-5h8a5 5 0 0 1 5 5v2z"
+                        />
+                    </svg>
+                    <p style="margin-top:16px;"> شرایط و ضوابط</p>
                 </button>
 
             </div>
             <div class="navbar-item">
                 <button class="navbar-button">
-                    <img src="./icons/contact.svg" style="margin-top: -18px; width: 65px; height: 60px;">
-                    <p style="margin-top:10px;"> تماس با ما</p>
+                    <?xml version="1.0" ?>
+                    <svg class="navbar-svg" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h48v48h-48z" fill="none" />
+                        <path d="M38 14v8h-26.34l7.17-7.17-2.83-2.83-12 12 12 12 2.83-2.83-7.17-7.17h30.34v-12z" />
+                    </svg>
+                    <p style="margin-top:16px;"> بازگرداندن</p>
+                </button>
+
+            </div>
+            <div class="navbar-item">
+                <button class="navbar-button">
+
+                    <?xml version="1.0" ?>
+                    <svg class="navbar-svg" PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
+                        <svg style="enable-background:new 0 0 499.979 404.265;" version="1.1" viewBox="0 0 499.979 404.265" xml:space="preserve"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <g id="cloud-question-mark">
+                                <g id="cloud-question-mark_1_">
+                                    <path d="M404.179,119.452c-4.323,0-8.528,0.387-12.701,0.945C387.832,53.29,332.279,0,264.272,0    c-55.51,0-97.805,40.418-115.269,89.975c-9.321-2.445-24.006-8.688-34.089-8.688C51.456,81.286,0,132.731,0,196.212    c0,63.458,51.456,114.882,114.914,114.882c19.426,0,52.014,0,88.635,0c1.308,3.754,3.668,7.016,6.8,9.375    c-8.688,9.311-13.387,20.917-13.387,33.789c0,13.516,5.053,25.722,14.664,35.334c9.59,9.59,21.851,14.674,35.484,14.674    c13.591,0,25.872-5.063,35.537-14.61c9.687-9.59,14.803-21.839,14.803-35.398c0-13.344-5.064-25.336-14.524-34.84    c2.5-2.231,4.387-5.085,5.503-8.324c51.788,0,98.341,0,115.751,0c52.893,0,95.8-42.907,95.8-95.832    C499.979,162.359,457.072,119.452,404.179,119.452z M268.563,375.453c-5.931,5.857-13.087,8.817-21.453,8.817    c-8.357,0-15.479-2.961-21.357-8.817c-5.857-5.878-8.806-12.936-8.806-21.196c0-8.259,2.906-15.275,8.72-21.11    c5.482-5.471,12.089-8.26,19.748-8.56c0.461-0.022,0.89-0.15,1.362-0.15c0.482,0,0.923,0.129,1.384,0.15    c7.862,0.3,14.663,3.089,20.316,8.56c5.974,5.835,8.978,12.85,8.978,21.11C277.455,362.517,274.494,369.575,268.563,375.453z     M279.375,263.339c-2.564,3.754-4.709,8.796-6.447,15.082c-1.738,6.264-2.865,14.995-3.315,26.173h-21.507h-2.649h-23.095    l-0.171-7.853c0-15.596,2.832-29.734,8.528-42.498c5.717-12.722,14.932-24.649,27.739-35.806    c12.324-10.812,19.769-18.277,22.322-22.333c2.543-4.054,3.829-8.817,3.829-14.287c0-7.445-3.111-13.73-9.332-18.9    c-6.21-5.171-14.566-7.788-25.025-7.788c-10.683,0-19.469,3.174-26.323,9.461c-6.865,6.307-10.351,14.437-10.458,24.37h-45.685    c-0.247-22.354,7.434-40.889,23.008-55.477c15.575-14.61,36.096-21.947,61.56-21.947c16.39,0,30.346,3.025,41.845,9.075    c11.499,6.05,20.724,14.759,27.642,26.173c6.908,11.392,10.372,23.363,10.372,35.912c0,6.844-1.105,13.581-3.325,20.21    c-2.21,6.65-5.706,13.429-10.448,20.402c-2.789,4.076-9.483,10.919-20.08,20.573C288.267,253.063,281.928,259.541,279.375,263.339    z"
+                                        class="navbar-svg" />
+                                </g>
+                            </g>
+                            <g id="Layer_1" />
+                        </svg>
+                        <p style="margin-top:15px;"> سوالات متداول</p>
+                </button>
+
+            </div>
+            <div class="navbar-item">
+                <button class="navbar-button">
+                    <?xml version="1.0" ?>
+                    <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
+                    <svg class="navbar-svg" enable-background="new 0 0 128 128" height="128px" id="Слой_1" version="1.1" viewBox="0 0 128 128"
+                        width="128px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g>
+                            <path d="M0.5,18.5v91h127v-91H0.5z M105.1992188,28.5L63.9550781,56.956543L21.3642578,28.5H105.1992188z     M10.5,99.5V33.2675781l53.5449219,35.7763672L117.5,32.1621094V99.5H10.5z"
+                            />
+                        </g>
+                    </svg>
+                    <p style="margin-top:15px;"> تماس با ما</p>
                 </button>
 
             </div>
 
             <div class="navbar-item">
                 <button class="navbar-button">
-                    <img src="./icons/chat.svg" style="margin-top: -26px; width: 85px; height: 85px;">
-                    <p style="margin-top:-7px;"> درباره‌ی ما</p>
+                    <?xml version="1.0" ?>
+                    <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
+                    <svg class="navbar-svg" style="margin-top: -10px;"height="32px" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" width="32px"
+                        xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g id="Layer_1" />
+                        <g id="chat_x5F_alt_x5F_stroke">
+                            <g>
+                                <g>
+                                    <path d="M25.977,12.213c-0.027,1.387-0.336,2.695-0.883,3.889C27.977,16.582,28,18.93,28,20     c0,0.992,0,4-3.996,4H20c-2.605,0-4.938,1.258-6.398,3.203C12.633,26.469,12,25.305,12,24v-4c0-0.791,0.141-1.414,0.359-1.928     C12.242,18.051,12.125,18,12,18H8.203c-0.129,0.619-0.199,1.281-0.199,2v4c0,4.418,3.578,8,7.996,8c0-2.211,1.789-4,4-4h4.004     C28,28,32,25.75,32,20C32,15.107,29.219,12.84,25.977,12.213z"
+                                     />
+                                </g>
+                                <path d="M16,4c1.492,0,4,0.52,4,4v4c0,1.309-0.633,2.471-1.602,3.201C16.938,13.26,14.609,12,12,12H8.004    C4,12,4,8.99,4,8c0-1.195,0-4,4.004-4H16 M16,0H8.004C4,0,0,2.125,0,8c0,5.75,4,8,8.004,8H12c2.211,0,4,1.793,4,4    c4.418,0,8.004-3.582,8.004-8V8C24.004,2.479,20,0,16,0L16,0z"
+                                     />
+                            </g>
+                        </g>
+                    </svg>
+                    <p style="margin-top:12px;"> درباره‌ی ما</p>
                 </button>
 
             </div>
