--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+        <title>کلاستر - درباره‌ی ما</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="style/general.css">
 </head>
@@ -12,7 +13,7 @@
         <div class="top-panel">
             <div class="top-search">
                 <input class="top-search-input" type="text">
-                <i class="fa fa-search" style="color:gray;"></i>
+                <i class="fa fa-search top-search-" style="color:gray;"></i>
                 </input>
             </div>
             <div class="top-title">Clothster</div>
@@ -54,16 +55,18 @@
                 </button>
 
             </div>
-            <div class="navbar-item">
-                <button class="navbar-button">
-                    <?xml version="1.0" ?>
-                    <svg class="navbar-svg" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 0h48v48h-48z" fill="none" />
-                        <path d="M38 14v8h-26.34l7.17-7.17-2.83-2.83-12 12 12 12 2.83-2.83-7.17-7.17h30.34v-12z" />
-                    </svg>
-                    <p style="margin-top:16px;"> بازگرداندن</p>
-                </button>
+            <a href="return.html">
 
+                <div class="navbar-item">
+                    <button class="navbar-button">
+                        <?xml version="1.0" ?>
+                        <svg class="navbar-svg" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M0 0h48v48h-48z" fill="none" />
+                            <path d="M38 14v8h-26.34l7.17-7.17-2.83-2.83-12 12 12 12 2.83-2.83-7.17-7.17h30.34v-12z" />
+                        </svg>
+                        <p style="margin-top:16px;"> بازگرداندن</p>
+                    </button>
+            </a>
             </div>
             <div class="navbar-item">
                 <button class="navbar-button">
@@ -84,6 +87,7 @@
                 </button>
 
             </div>
+            <a href="contact.html">
             <div class="navbar-item">
                 <button class="navbar-button">
                     <?xml version="1.0" ?>
@@ -99,29 +103,31 @@
                 </button>
 
             </div>
-
-            <div class="navbar-item">
-                <button class="navbar-button">
-                    <?xml version="1.0" ?>
-                    <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
-                    <svg class="navbar-svg" style="margin-top: -10px;" height="32px" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32"
-                        width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <g id="Layer_1" />
-                        <g id="chat_x5F_alt_x5F_stroke">
-                            <g>
+            </a>
+            <a href="about.html">
+                <div class="navbar-item">
+                    <button class="default-navbar-button">
+                        <?xml version="1.0" ?>
+                        <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
+                        <svg class="navbar-svg" style="margin-top: -10px;" height="32px" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32"
+                            width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <g id="Layer_1" />
+                            <g id="chat_x5F_alt_x5F_stroke">
                                 <g>
-                                    <path d="M25.977,12.213c-0.027,1.387-0.336,2.695-0.883,3.889C27.977,16.582,28,18.93,28,20     c0,0.992,0,4-3.996,4H20c-2.605,0-4.938,1.258-6.398,3.203C12.633,26.469,12,25.305,12,24v-4c0-0.791,0.141-1.414,0.359-1.928     C12.242,18.051,12.125,18,12,18H8.203c-0.129,0.619-0.199,1.281-0.199,2v4c0,4.418,3.578,8,7.996,8c0-2.211,1.789-4,4-4h4.004     C28,28,32,25.75,32,20C32,15.107,29.219,12.84,25.977,12.213z"
+                                    <g>
+                                        <path d="M25.977,12.213c-0.027,1.387-0.336,2.695-0.883,3.889C27.977,16.582,28,18.93,28,20     c0,0.992,0,4-3.996,4H20c-2.605,0-4.938,1.258-6.398,3.203C12.633,26.469,12,25.305,12,24v-4c0-0.791,0.141-1.414,0.359-1.928     C12.242,18.051,12.125,18,12,18H8.203c-0.129,0.619-0.199,1.281-0.199,2v4c0,4.418,3.578,8,7.996,8c0-2.211,1.789-4,4-4h4.004     C28,28,32,25.75,32,20C32,15.107,29.219,12.84,25.977,12.213z"
+                                        />
+                                    </g>
+                                    <path d="M16,4c1.492,0,4,0.52,4,4v4c0,1.309-0.633,2.471-1.602,3.201C16.938,13.26,14.609,12,12,12H8.004    C4,12,4,8.99,4,8c0-1.195,0-4,4.004-4H16 M16,0H8.004C4,0,0,2.125,0,8c0,5.75,4,8,8.004,8H12c2.211,0,4,1.793,4,4    c4.418,0,8.004-3.582,8.004-8V8C24.004,2.479,20,0,16,0L16,0z"
                                     />
                                 </g>
-                                <path d="M16,4c1.492,0,4,0.52,4,4v4c0,1.309-0.633,2.471-1.602,3.201C16.938,13.26,14.609,12,12,12H8.004    C4,12,4,8.99,4,8c0-1.195,0-4,4.004-4H16 M16,0H8.004C4,0,0,2.125,0,8c0,5.75,4,8,8.004,8H12c2.211,0,4,1.793,4,4    c4.418,0,8.004-3.582,8.004-8V8C24.004,2.479,20,0,16,0L16,0z"
-                                />
                             </g>
-                        </g>
-                    </svg>
-                    <p style="margin-top:12px;"> درباره‌ی ما</p>
-                </button>
+                        </svg>
+                        <p style="margin-top:12px;"> درباره‌ی ما</p>
+                    </button>
 
-            </div>
+                </div>
+            </a>
         </div>
     </div>
 
@@ -172,8 +178,7 @@
                         xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g id="Flat_copy">
                             <g>
-                                <path d="M16,0C7.163,0,0,7.163,0,16c0,8.836,7.163,16,16,16s16-7.164,16-16C32,7.163,24.837,0,16,0z"
-                                     />
+                                <path d="M16,0C7.163,0,0,7.163,0,16c0,8.836,7.163,16,16,16s16-7.164,16-16C32,7.163,24.837,0,16,0z" />
                             </g>
                             <path d="M13.69,24.903h3.679v-8.904h2.454l0.325-3.068h-2.779l0.004-1.536c0-0.8,0.076-1.229,1.224-1.229h1.534   V7.097h-2.455c-2.949,0-3.986,1.489-3.986,3.992v1.842h-1.838v3.069h1.838V24.903z"
                                 fill="#FFFFFF" />
@@ -182,51 +187,50 @@
                 </span>
             </div>
             <div class="page-footer-social-icons">
-                    <span class="social-logo">
-                        <?xml version="1.0" ?>
-                        <svg enable-background="new 0 0 25 25" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <g id="Flat_copy" transform="scale(1)">
-                                <g>
-                                    <path d="M16,0C7.163,0,0,7.163,0,16c0,8.836,7.163,16,16,16s16-7.164,16-16C32,7.163,24.837,0,16,0z" />
-                                </g>
-                                <path d="M18.226,8.886c-1.59,0.579-2.595,2.071-2.481,3.704l0.038,0.63l-0.636-0.077   c-2.315-0.296-4.338-1.299-6.056-2.984l-0.84-0.836L8.036,9.94c-0.458,1.376-0.165,2.83,0.789,3.808   c0.509,0.54,0.394,0.617-0.483,0.296c-0.305-0.103-0.573-0.18-0.598-0.141c-0.089,0.09,0.216,1.26,0.458,1.724   c0.331,0.644,1.005,1.273,1.743,1.647l0.624,0.296L9.83,17.581c-0.712,0-0.738,0.013-0.661,0.284   c0.254,0.836,1.259,1.724,2.379,2.11l0.789,0.27l-0.687,0.412c-1.018,0.593-2.214,0.927-3.41,0.951   c-0.573,0.013-1.044,0.064-1.044,0.103c0,0.128,1.553,0.848,2.455,1.132c2.71,0.836,5.929,0.475,8.346-0.952   c1.718-1.016,3.435-3.036,4.237-4.992c0.433-1.041,0.865-2.945,0.865-3.858c0-0.592,0.038-0.669,0.75-1.376   c0.42-0.412,0.814-0.862,0.891-0.99c0.128-0.245,0.114-0.245-0.534-0.026c-1.081,0.386-1.234,0.335-0.699-0.244   c0.394-0.412,0.865-1.158,0.865-1.376c0-0.038-0.191,0.026-0.407,0.141c-0.229,0.129-0.738,0.322-1.12,0.437l-0.687,0.219   L21.535,9.4c-0.344-0.231-0.826-0.489-1.081-0.566C19.804,8.654,18.812,8.68,18.226,8.886z"
+                <span class="social-logo">
+                    <?xml version="1.0" ?>
+                    <svg enable-background="new 0 0 25 25" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g id="Flat_copy" transform="scale(1)">
+                            <g>
+                                <path d="M16,0C7.163,0,0,7.163,0,16c0,8.836,7.163,16,16,16s16-7.164,16-16C32,7.163,24.837,0,16,0z" />
+                            </g>
+                            <path d="M18.226,8.886c-1.59,0.579-2.595,2.071-2.481,3.704l0.038,0.63l-0.636-0.077   c-2.315-0.296-4.338-1.299-6.056-2.984l-0.84-0.836L8.036,9.94c-0.458,1.376-0.165,2.83,0.789,3.808   c0.509,0.54,0.394,0.617-0.483,0.296c-0.305-0.103-0.573-0.18-0.598-0.141c-0.089,0.09,0.216,1.26,0.458,1.724   c0.331,0.644,1.005,1.273,1.743,1.647l0.624,0.296L9.83,17.581c-0.712,0-0.738,0.013-0.661,0.284   c0.254,0.836,1.259,1.724,2.379,2.11l0.789,0.27l-0.687,0.412c-1.018,0.593-2.214,0.927-3.41,0.951   c-0.573,0.013-1.044,0.064-1.044,0.103c0,0.128,1.553,0.848,2.455,1.132c2.71,0.836,5.929,0.475,8.346-0.952   c1.718-1.016,3.435-3.036,4.237-4.992c0.433-1.041,0.865-2.945,0.865-3.858c0-0.592,0.038-0.669,0.75-1.376   c0.42-0.412,0.814-0.862,0.891-0.99c0.128-0.245,0.114-0.245-0.534-0.026c-1.081,0.386-1.234,0.335-0.699-0.244   c0.394-0.412,0.865-1.158,0.865-1.376c0-0.038-0.191,0.026-0.407,0.141c-0.229,0.129-0.738,0.322-1.12,0.437l-0.687,0.219   L21.535,9.4c-0.344-0.231-0.826-0.489-1.081-0.566C19.804,8.654,18.812,8.68,18.226,8.886z"
+                                fill="#FFFFFF" />
+                        </g>
+                    </svg>
+                </span>
+                <span class="social-logo">
+                    <?xml version="1.0" ?>
+                    <svg enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g id="Flat_copy">
+                            <g>
+                                <path d="M16-0.005c-8.837,0-16,7.163-16,16c0,8.836,7.163,16,16,16s16-7.164,16-16C32,7.158,24.837-0.005,16-0.005    z" />
+                            </g>
+                            <g>
+                                <path d="M18.209,7.177c0,0-4.049,0-5.435,0c-2.486,0-4.827,1.745-4.827,3.926c0,2.229,1.695,3.962,4.224,3.962    c0.176,0,0.347-0.04,0.515-0.052c-0.166,0.313-0.28,0.65-0.28,1.017c0,0.62,0.332,1.114,0.753,1.524    c-0.316,0-0.625,0.004-0.961,0.004c-3.08,0.001-5.45,1.961-5.45,3.995c0,2.003,2.599,3.258,5.679,3.258    c3.512,0,5.451-1.994,5.451-3.997c0-1.606-0.474-2.568-1.939-3.607c-0.502-0.354-1.46-1.217-1.46-1.725    c0-0.594,0.169-0.887,1.065-1.587c0.916-0.716,1.566-1.57,1.566-2.743c0-1.394-0.6-3.095-1.766-3.095h1.984L18.209,7.177z     M16.385,20.467c0.042,0.187,0.068,0.378,0.068,0.572c0,1.619-1.045,2.884-4.038,2.884c-2.129,0-3.666-1.347-3.666-2.966    c0-1.586,1.907-2.908,4.037-2.884c0.495,0.005,0.959,0.086,1.379,0.22C15.321,19.098,16.15,19.552,16.385,20.467z M12.975,14.429    c-1.429-0.041-2.788-1.598-3.034-3.474c-0.246-1.878,0.712-3.314,2.141-3.272c1.428,0.044,2.788,1.55,3.034,3.426    C15.362,12.986,14.404,14.471,12.975,14.429z"
                                     fill="#FFFFFF" />
+                                <polygon fill="#FFFFFF" points="22.618,14.224 22.618,11.579 20.854,11.579 20.854,14.224 18.209,14.224 18.209,15.988     20.854,15.988 20.854,18.633 22.618,18.633 22.618,15.988 25.263,15.988 25.263,14.224   "
+                                />
                             </g>
-                        </svg>
-                    </span>
-                    <span class="social-logo">
-                        <?xml version="1.0" ?>
-                        <svg enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <g id="Flat_copy">
-                                <g>
-                                    <path d="M16-0.005c-8.837,0-16,7.163-16,16c0,8.836,7.163,16,16,16s16-7.164,16-16C32,7.158,24.837-0.005,16-0.005    z" />
-                                </g>
-                                <g>
-                                    <path d="M18.209,7.177c0,0-4.049,0-5.435,0c-2.486,0-4.827,1.745-4.827,3.926c0,2.229,1.695,3.962,4.224,3.962    c0.176,0,0.347-0.04,0.515-0.052c-0.166,0.313-0.28,0.65-0.28,1.017c0,0.62,0.332,1.114,0.753,1.524    c-0.316,0-0.625,0.004-0.961,0.004c-3.08,0.001-5.45,1.961-5.45,3.995c0,2.003,2.599,3.258,5.679,3.258    c3.512,0,5.451-1.994,5.451-3.997c0-1.606-0.474-2.568-1.939-3.607c-0.502-0.354-1.46-1.217-1.46-1.725    c0-0.594,0.169-0.887,1.065-1.587c0.916-0.716,1.566-1.57,1.566-2.743c0-1.394-0.6-3.095-1.766-3.095h1.984L18.209,7.177z     M16.385,20.467c0.042,0.187,0.068,0.378,0.068,0.572c0,1.619-1.045,2.884-4.038,2.884c-2.129,0-3.666-1.347-3.666-2.966    c0-1.586,1.907-2.908,4.037-2.884c0.495,0.005,0.959,0.086,1.379,0.22C15.321,19.098,16.15,19.552,16.385,20.467z M12.975,14.429    c-1.429-0.041-2.788-1.598-3.034-3.474c-0.246-1.878,0.712-3.314,2.141-3.272c1.428,0.044,2.788,1.55,3.034,3.426    C15.362,12.986,14.404,14.471,12.975,14.429z"
-                                        fill="#FFFFFF" />
-                                    <polygon fill="#FFFFFF" points="22.618,14.224 22.618,11.579 20.854,11.579 20.854,14.224 18.209,14.224 18.209,15.988     20.854,15.988 20.854,18.633 22.618,18.633 22.618,15.988 25.263,15.988 25.263,14.224   "
-                                    />
-                                </g>
+                        </g>
+                    </svg>
+                </span>
+                <span class="social-logo">
+                    <?xml version="1.0" ?>
+                    <svg enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g id="Flat_copy">
+                            <g>
+                                <path d="M16,0C7.163,0,0,7.163,0,16c0,8.836,7.163,16,16,16s16-7.164,16-16C32,7.163,24.837,0,16,0z" />
                             </g>
-                        </svg>
-                    </span>
-                    <span class="social-logo">
-                        <?xml version="1.0" ?>
-                        <svg enable-background="new 0 0 32 32" version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <g id="Flat_copy">
-                                <g>
-                                    <path d="M16,0C7.163,0,0,7.163,0,16c0,8.836,7.163,16,16,16s16-7.164,16-16C32,7.163,24.837,0,16,0z"
-                                         />
-                                </g>
-                                <path d="M13.69,24.903h3.679v-8.904h2.454l0.325-3.068h-2.779l0.004-1.536c0-0.8,0.076-1.229,1.224-1.229h1.534   V7.097h-2.455c-2.949,0-3.986,1.489-3.986,3.992v1.842h-1.838v3.069h1.838V24.903z"
-                                    fill="#FFFFFF" />
-                            </g>
-                        </svg>
-                    </span>
-                </div>
+                            <path d="M13.69,24.903h3.679v-8.904h2.454l0.325-3.068h-2.779l0.004-1.536c0-0.8,0.076-1.229,1.224-1.229h1.534   V7.097h-2.455c-2.949,0-3.986,1.489-3.986,3.992v1.842h-1.838v3.069h1.838V24.903z"
+                                fill="#FFFFFF" />
+                        </g>
+                    </svg>
+                </span>
+            </div>
             <div class="page-footer-social-list"> </div>
 
         </div>
