some improvement in about page

--- a/about.html
+++ b/about.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
-        <title>کلاستر - درباره‌ی ما</title>
+    <title>کلاستر - درباره‌ی ما</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="style/general.css">
+    <link rel="stylesheet" type="text/css" href="style/about.css">
+
 </head>
 
 <body>
@@ -88,21 +90,21 @@
 
             </div>
             <a href="contact.html">
-            <div class="navbar-item">
-                <button class="navbar-button">
-                    <?xml version="1.0" ?>
-                    <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
-                    <svg class="navbar-svg" enable-background="new 0 0 128 128" height="128px" id="Слой_1" version="1.1" viewBox="0 0 128 128"
-                        width="128px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <g>
-                            <path d="M0.5,18.5v91h127v-91H0.5z M105.1992188,28.5L63.9550781,56.956543L21.3642578,28.5H105.1992188z     M10.5,99.5V33.2675781l53.5449219,35.7763672L117.5,32.1621094V99.5H10.5z"
-                            />
-                        </g>
-                    </svg>
-                    <p style="margin-top:15px;"> تماس با ما</p>
-                </button>
+                <div class="navbar-item">
+                    <button class="navbar-button">
+                        <?xml version="1.0" ?>
+                        <!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
+                        <svg class="navbar-svg" enable-background="new 0 0 128 128" height="128px" id="Слой_1" version="1.1" viewBox="0 0 128 128"
+                            width="128px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <g>
+                                <path d="M0.5,18.5v91h127v-91H0.5z M105.1992188,28.5L63.9550781,56.956543L21.3642578,28.5H105.1992188z     M10.5,99.5V33.2675781l53.5449219,35.7763672L117.5,32.1621094V99.5H10.5z"
+                                />
+                            </g>
+                        </svg>
+                        <p style="margin-top:15px;"> تماس با ما</p>
+                    </button>
 
-            </div>
+                </div>
             </a>
             <a href="about.html">
                 <div class="navbar-item">
@@ -132,7 +134,44 @@
     </div>
 
     <div class="page-about-body">
-        Body
+        <div class="about-body-container">
+            <div class="first-box">
+                <p style="margin-left: auto; margin-right: auto; font-color: gray;   "> چرا از ما خرید می‌کنید؟</p>
+            </div>
+            <div class="second-box" style="display: flex;">
+                <div style="margin-top:10px; text-align:right; font-size:0.85em; margin-left:auto; margin-right:auto; width: 65%; color: gray;">
+                    بعد از تجربه خرید اینترنتی بیشتر با سرعت زندگی مدرن همگام شد و توانست خود را با روحیات و نیازهای رو به رشد مشتریان هماهنگ
+                    کند. در حالیکه مشغله‌های روزانه فرصت لذت بردن از اوقات فراغت را کاهش داده است، صرف زمان های طولانی برای
+                    انجام سفرهای درون شهری و خرید نیازهای روزانه معنای خود را از دست می‌دهد، آنچه در فرصت اوقات فراغت برای
+                    افراد در اولویت قرار می‌گیرد، تفریح، آموزش، ورزش، لذت بردن از علایق شخصی و رفع خستگی‌های روزانه است.
+                    همه این عوامل افراد را مجاب به استفاده از روش‌های نوین مانند مراجعه به یک فروشگاه اینترنتی در کمترین
+                    زمان برای انجام فعالیت‌هایی وقت گیر گذشته می‌کند، تا قبل از دیجی استایل فرآیند استقبال مشتریان از دیجی‌کالا
+                    ثابت کرد این روش از زندگی مورد علاقه طیف عظیمی از افراد است
+                </div>
+                <div style="width: 30%">
+                    <div>
+                        <img src="icons/logo.png" height="100px" width="145px" style="margin-left:25px; ">
+                    </div>
+                    <div style="text-align:right; font-weight: 700; font-size:0.95em;  margin-right:55px; color:gray;">
+                        درباره‌ی ما
+                    </div>
+                    <div style="margin-top:10px; text-align:right; font-size:0.85em; margin-right:10px; color: gray;">
+                        توسعه اینترنت روشهای خرید ما را به کلی دگرگون کرده است. منافع موجود در خرید اینترنتی هر روز، تعداد بیشتری از مردم را به تجربه
+                        آن و ایجاد تغییر در الگوهای متداول خرید ترغیب می‌کند
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="about-body-container">
+            <div class="first-box">
+                <p style="margin-left: auto; margin-right: auto; font-color: gray;   "> چرا از ما خرید می‌کنید؟</p>
+            </div>
+            <div class="second-box" style="display:flex; justify-content:space-around; background: url(icons/brands.png); background-repeat: no-repeat; background-size: 100% 100%;">
+                <div class="field-button">
+                    تمام برندهای معتبر را با ما تجربه کنید
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="page-footer">
