--- a/about.html
+++ b/about.html
@@ -136,7 +136,26 @@
     <div class="page-about-body">
         <div class="about-body-container">
             <div class="first-box">
-                <p style="margin-left: auto; margin-right: auto; font-color: gray;   "> چرا از ما خرید می‌کنید؟</p>
+                <div style="margin-top:10px; text-align:center; font-weight: 600; font-size:0.95em;  margin-left:auto; margin-right:auto; color:gray;">
+                    چرا از ما خرید می‌کنید؟
+                </div>
+                <div style="margin-left:auto; margin-right: auto; z-index:2; ">
+                    <svg style="margin-top:10px; margin-left:20px; " xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                        width="300px" height="300px" version="1.1">
+                        <defs/>
+                        <g transform="scale(1.75)">
+                            <path d="M 0 120 L 0 80 Q 0 70 0 60 L 0 0" fill="none" stroke="#000000" stroke-miterlimit="10" pointer-events="none" />
+                            <path d="M 0 120 L 155 120" stroke="gray" stroke-miterlimit="10" pointer-events="none" />
+                            <path d="M 155 0 L 155 120" stroke="gray" stroke-miterlimit="10" pointer-events="none" />
+                            <path d="M 0 0 L 155 0" stroke="gray" stroke-miterlimit="10" pointer-events="none" />
+                            <path d="M 0 120 L 155 0" stroke="gray" stroke-miterlimit="10" pointer-events="none" />
+                            <path d="M 155 120 L 0 0" stroke="gray" stroke-miterlimit="10" pointer-events="none" />
+                        </g>
+                    </svg>
+                </div>
+                <div style="position:relative; z-index:1; border-width:1px; height:20px; width:60%; border-style:solid; border-color:gray;  background-color:white; z-index:1; margin-top:-210px; text-align:center; font-weight: 400; font-size:0.90em;  margin-left:auto; margin-right:auto; color:gray;">
+                    متن شما اینجا قرار می‌گیرد
+                </div>
             </div>
             <div class="second-box" style="display: flex;">
                 <div style="margin-top:10px; text-align:right; font-size:0.85em; margin-left:auto; margin-right:auto; width: 65%; color: gray;">
@@ -163,8 +182,34 @@
             </div>
         </div>
         <div class="about-body-container">
-            <div class="first-box">
-                <p style="margin-left: auto; margin-right: auto; font-color: gray;   "> چرا از ما خرید می‌کنید؟</p>
+            <div class="first-box" style="background-color:rgb(34, 96, 231);  box-shadow: 10px 10px 5px grey;">
+                <div>
+                    <?xml version="1.0" ?>
+                    <svg style="margin-top:20px; margin-left:105px; " height="50px" version="1.1" viewBox="0 0 32 32" width="100px" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <title/>
+                        <desc/>
+                        <defs/>
+                        <g fill="none" fill-rule="evenodd" id="Page-1" stroke="none" stroke-width="1">
+                            <g transform="scale(1)" fill="#FFFFFF" id="icon-7-mail-envelope-open">
+                                <path d="M16.5,3 L4,14 L4,28.0059397 C4,29.1072288 4.88976324,30 6.00359486,30 L26.9964051,30 C28.10296,30 29,29.1054862 29,28.0059397 L29,14 L16.5,3 L16.5,3 Z M13.5,23 L6.5,29 L26.5,29 L19.5,23 L13.5,23 L13.5,23 Z M16.5,4.30000019 L27.5,14 L18.5,22.000001 L14.5,22.000001 L5.5,14 L16.5,4.30000019 L16.5,4.30000019 Z M27.68514,28.7251701 L20,22.0170898 L28,15 L28,21.5000199 L28,28.0000398 C28,28.2831537 27.8789949,28.5418569 27.68514,28.7251701 L27.68514,28.7251701 L27.68514,28.7251701 Z M5.31486,28.7251701 L13,22.0170898 L5,15 L5,21.5000199 L5,28.0000398 C5,28.2831537 5.12100514,28.5418569 5.31486,28.7251701 L5.31486,28.7251701 L5.31486,28.7251701 Z"
+                                    id="mail-envelope-open" />
+                            </g>
+                        </g>
+                    </svg>
+                </div>
+                <div style="margin-left:10px; margin-top:20px; text-align:center; font-weight: 300; font-size:0.95em;   color:white;">
+                    در خبرنامه ما
+                </div>
+                <div style="margin-left:10px; margin-top:10px; text-align:center; font-weight: 700; font-size:1em;   color:white;">
+                    عضو شوید
+                </div>
+                <div style="margin-top:20px; color:rgb(34, 96, 231); margin-left:30px;">
+                    <input style="height:20px; text-align:right; border-radius: 120px; width:90%" type="text" name="login" class="form-control" placeholder="آدرس ایمیل خود را وارد کنید    ">
+                </div>
+                <div class="ozv-button">
+                    عضو شوید
+                </div>
             </div>
             <div class="second-box" style="display:flex; justify-content:space-around; background: url(icons/brands.png); background-repeat: no-repeat; background-size: 100% 100%;">
                 <div class="field-button">
