--- a/return.html
+++ b/return.html
@@ -3,8 +3,10 @@
 
 <head>
     <title>کلاستر - بازگرداندن کالا</title>
+    <link href="https://cdn.rawgit.com/rastikerdar/shabnam-font/v3.0.0/dist/font-face.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="style/general.css">
+    <link rel="stylesheet" type="text/css" href="style/return.css">
 </head>
 
 <body>
@@ -132,8 +134,60 @@
         </div>
     </div>
 
-    <div class="page-about-body">
-        Body
+    <div class="page-about-body" style="margin-top:20px; width:80%; margin-left:100px;">
+        <div style="text-align:right; font-weight: 700; font-size:0.95em;  color:gray;">
+            شرایط بازگرداندن کالا
+        </div>
+        <div style="margin-top:10px; text-align:right; font-size:0.85em; margin-right:10px; color: gray;">
+            برای رضایت خاطر مشتریان و بالا رفتن آمار فروش اینترنتی کالاها، فروشگاه ما در نظر دارد تا برای هر یک از اقلام فروخته شده تا
+            ۱۰ روز مهلت تست و بازگشت به شرط سالم بودن لباس را اعمال کند
+        </div>
+        <hr style="margin-top:12px; width:89%; color:transparent">
+        <div class="bottom-body">
+            <div class="return-picture" style="display:flex; justify-content:space-around; background: url(icons/lebas.png); background-repeat: no-repeat; background-size: 100% 100%;">
+
+            </div>
+            <div class="return-body">
+                <div style="text-align:right; font-weight: 700; font-size:0.95em;  color:gray;">
+                    وضعیت کالا
+                </div>
+                <br>
+                <div style="margin-top:10px; text-align:right; font-size:0.85em; margin-right:3px; color: gray;">
+                    کالا باید از نظر ظاهری کاملا سالم و در شرایط اولیه‌ای باشد که تحویل مشتری شده‌است
+                </div>
+                <div style="margin-top:10px; text-align:right; font-size:0.85em; margin-right:3px; color: gray;">
+                    برای هر کالا وقت جداگانه‌ای از طرف شرکت در نظر گرفته می‌شود که در آن وقت مخصوص پیک نسبت به جمع‌آوری کالا از مشتری اقدام می‌کند
+                </div>
+                <br>
+                <div style="margin-top:10px; text-align:right; font-size:0.85em; margin-right:3px; color: gray;">
+                    در صورتی که کالایی برای بازگرداندن دارید، شماره سفارش خود را در قسمت زیر نوشته و کلید ثبت را فشار دهید
+                </div>
+
+                <div class="return-box">
+                    <div class="blutex">
+                        مشخصات سفارش
+                    </div>
+                    <hr style="margin-top:6px; width:89%; color:transparent">
+                    
+                    <div style="width: 88%">
+                        <div class="blutex">
+                            شهر
+                        </div>
+                        <input class="return-input" type="text" name="login" class="form-control"
+                        placeholder="شهر خود را وارد کنید ">
+                        <div class="blutex">
+                            شماره سفارش
+                        </div>
+                        <input class="return-input" type="text" name="login" class="form-control"
+                        placeholder="شماره فاکتور سفارش را وارد کنید ">
+                        <br>
+                        <button class="ozv-button">
+                            ثبت درخواست
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="page-footer">
