--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,10 @@
 
 <head>
     <title>کلاستر - ارتباط با ما</title>
+    <link href="https://cdn.rawgit.com/rastikerdar/shabnam-font/v[X.Y.Z]/dist/font-face.css" rel="stylesheet" type="text/css"
+    />
+    <link href="https://cdn.rawgit.com/rastikerdar/shabnam-font/v3.0.0/dist/font-face.css" rel="stylesheet" type="text/css" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="style/general.css">
 </head>
