contact page finished

--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,11 @@
 
 <head>
     <title>کلاستر - ارتباط با ما</title>
-    <link href="https://cdn.rawgit.com/rastikerdar/shabnam-font/v[X.Y.Z]/dist/font-face.css" rel="stylesheet" type="text/css"
-    />
+
     <link href="https://cdn.rawgit.com/rastikerdar/shabnam-font/v3.0.0/dist/font-face.css" rel="stylesheet" type="text/css" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="style/contact.css">
     <link rel="stylesheet" type="text/css" href="style/general.css">
 </head>
 
@@ -136,8 +136,124 @@
         </div>
     </div>
 
-    <div class="page-about-body">
-        Body
+    <div class="page-contact-body">
+        <div class="gray-title">
+            درباره‌ی ما
+        </div>
+        <div class="gray-body">
+            کاربر گرامی، لطفا در صورت وجود هرگونه سوال یا ابهامی، پیش از ارسال ایمیل یا تماس تلفنی با دیجی‌استایل، بخش پرسش‌‌های متداول
+            را مطالعه بفرمایید و درصورتی که پاسخ خود را نیافتید، با ما تماس بگیرید
+        </div>
+        <hr style="margin-top:10px; width:89%; color:transparent">
+        <div class="first-container">
+            <div class="gray-body" style="padding-right:10px; border-width:1px; width:250px; height: 40px; border-right-style: solid; border-right-color:gray;">
+                ما را در رسانه‌های اجتماعی
+                <strong>تلگرام</strong>
+                ،
+                <strong>اینستاگرام</strong>
+                و
+                <strong>توییتر</strong>
+                نیز دنبال کنید
+            </div>
+            <div class="gray-body" style="padding-right:10px; border-width:1px; width:150px; height: 40px;">
+                <div>
+                    تلفن‌های تماس و فکس
+                </div>
+                <div>
+                    ۰۲۱-۴۴۶۵۷۴۰۰
+                </div>
+            </div>
+            <div style="width:50px; height:50px; background: url(icons/phone.png); background-repeat: no-repeat; background-size: 100% 100%;">
+
+            </div>
+            <div class="gray-body" style="padding-right:10px; border-width:1px; width:150px; height: 40px;">
+                <div>
+                    ایمیل سازمانی ما
+                </div>
+                <div>
+                    info@closther.ir
+                </div>
+            </div>
+            <div style="width:50px; height:50px; background: url(icons/email.png); background-repeat: no-repeat; background-size: 100% 100%;">
+            </div>
+        </div>
+        <br>
+        <br>
+
+        <div class="map-container">
+            <div style="width:60%;height:400px;background: url(icons/map.png); background-repeat: no-repeat; background-size: 100% 100%;">
+            </div>
+            <div style="width:35%">
+                <div class="gray-title">
+                    دفتر مرکزی
+                </div>
+                <div class="gray-body">
+                    تهران، چهارراه کالج، دانشگاه صنعتی امیرکبیر تهران، دانشکده مهندسی کامپیوتر و فناوری اطلاعات
+                </div>
+                <br>
+                <br>
+                <div class="gray-title">
+                    دفتر خدمات پس از فروش
+                </div>
+                <div class="gray-body">
+                    تهران، چهارراه کالج، دانشگاه صنعتی امیرکبیر تهران، دانشکده مهندسی کامپیوتر و فناوری اطلاعات
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="red-alert">
+            <p style="margin-top:15px; width:95%; margin-left:40px;">
+                در روزهای تعطیل رسمی، ۱۳ فروردین و ۲۹ اسفند و سایر روزهایی که توسط دولت تعطیل اعلام می‌شوند (به جز جمعه‌ها)، پاسخی از مراکز
+                ما دریافت نخواهید کرد
+            </p>
+        </div>
+
+        <div class="gray-title">
+            فرم تماس با ما
+        </div>
+        <div class="gray-body">
+            از طریق فرم زیر می‌توانید ما را از پیام‌های خود مطلع کنید
+        </div>
+        <div class="contact-box">
+            <div class="blutex">
+                تماس
+            </div>
+            <hr style="margin-top:10px; width:89%; color:transparent">
+            <div class="contact-field">
+                <div class="contact-info">
+                    <div>
+                        <div class="blutex">
+                            نام و نام خانوادگی
+                        </div>
+                        <input class="contact-input" type="text" name="login" class="form-control">
+                    </div>
+                    <div>
+                        <div class="blutex">
+                            آدرس سایت
+                        </div>
+                        <input class="contact-input" type="text" name="login" class="form-control">
+
+                    </div>
+                    <div>
+                        <div class="blutex">
+                            آدرس ایمیل
+                        </div>
+                        <input class="contact-input" type="text" name="login" class="form-control">
+
+                    </div>
+
+                </div>
+                <div class="blutex">
+                    پیام شما
+
+                </div>
+                <input class="contact-input" type="text" name="login" style="margin-top:20px; margin-left:80px; width:90%; height:200px; border-radius:10px; "
+                    class="form-control">
+                <div class="ozv-button">
+                    بفرست
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="page-footer">
