--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>کلاستر - درباره‌ی ما</title>
-    <link href="https://cdn.rawgit.com/rastikerdar/shabnam-font/v3.0.0/dist/font-face.css" rel="stylesheet" type="text/css" />    
+    <link href="https://cdn.rawgit.com/rastikerdar/shabnam-font/v3.0.0/dist/font-face.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="style/general.css">
     <link rel="stylesheet" type="text/css" href="style/about.css">
@@ -206,7 +206,8 @@
                     عضو شوید
                 </div>
                 <div style="margin-top:20px; color:rgb(34, 96, 231); margin-left:30px;">
-                    <input style="height:20px; text-align:right; border-radius: 120px; width:90%" type="text" name="login" class="form-control" placeholder="آدرس ایمیل خود را وارد کنید    ">
+                    <input style="height:20px; text-align:right; border-radius: 120px; width:90%" type="text" name="login" class="form-control"
+                        placeholder="آدرس ایمیل خود را وارد کنید    ">
                 </div>
                 <div class="ozv-button">
                     عضو شوید
@@ -353,7 +354,7 @@
 
         </div>
     </div>
-    
+
 </body>
 
 </html>
